apps/litellm/networkpolicy-litellm.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: litellm
spec:
  # Proxy pods and the migrations Job
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: litellm
  ingress:
    # From Ingress
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    # From Newt
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: newt
            k8s:app.kubernetes.io/component: newt
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    # From Open WebUI
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: open-webui
            k8s:app.kubernetes.io/component: open-webui
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP

  egress:
    # To DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # To pods in the same namespace (CNPG)
    - toEndpoints:
        - {}
    # To LLM engine pods.
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8001"
              protocol: TCP
            - port: "8100"
              protocol: TCP
    # To llama.cpp
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ai
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # To Stalwart SMTP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: stalwart
            k8s:app.kubernetes.io/name: stalwart
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
    # To Authentik
    - toServices:
        - k8sService:
            serviceName: authentik-server
            namespace: authentik
